# gpu-learning-lab

./: .gitignore  CLAUDE.md  README.md  RECOVERY.md  STATE.md  Skydio.Scott.Tomsu.url  docker-compose.yml  main.py  notion_auth.py  notion_auth_output.txt  pyproject.toml  requirements.txt  run_agent.bat  write_ui.py
.claude/: settings.json  settings.local.json
_archive/: draper-pitch.html  gtc-plan-26.html  jack-minor-package.html  ncp-study.html  nvidia-meeting-cheat.html  ornn-deal-package.html  ornn-deal-package.txt  terafab-louisiana.html
adc3k-deploy/: .vercelignore  adc3k-indexpage.html  adc3k-leadership.html  adc3k-learn.html  adc3k-pod-spec.html  adc3k-pod.html  ai-ops.html  biz card.html  blueprints-marlie.html  blueprints.html  boot.html  button-join-team.html  card.html  cassette-spec.html  cheatsheet.html  chp-block-diagram.html  chp-prime-mover.html  compare.html  dsx-renders.html  floor-plan.html  gtc-plan 26.html  gtc-plan.html  hub.html  index.html  investor-gate.html  investor-neocloud.html  investor-pitch.html  investor.html  investors.html  join-team.html  klft-deck.html  klft-scene-config.json  lafayette-ai-plan.html  lafayette.html  leadership.html  learn.html  louisiana-natural-gas-pipeline-network.html  louisiana.html  lsu.html  marlie-blueprints.html  (+45 more)
agents/: __init__.py  base.py
ai-advantage/: README.md  ally-prompt.md  commission-structure.md  franchise-playbook.md  installer-kit.md  sync-ally.js
aido/: __init__.py  assemble.py  deploy_to_runpod.sh  inject_content.py  manifest_schema.py  pipeline.py  render_episode.py  render_local.py  (+2 more)
(+1013 files in other folders)
